--- a/Latihan5.html
+++ b/Latihan5.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Formulir</title>
+	<title>Rumah Buku</title>
 </head>
 <body>
 	<form>
@@ -36,9 +36,9 @@
 	<tr>
 		<td>Combo box :</td>
 		<td><select>
-			<option>Bandung</option>
+			<option>Jakarta</option>
 			<option>Aceh</option>
-			<option>Surabaya</option>
+			<option>Jogjakarta</option>
 		</select></td>
 	</tr>
 	<tr>
